tiny fix. Fixed npm warnings, made cursor pointer on expand / collapse button

--- a/ohs_gui/src/components/Meeting.css
+++ b/ohs_gui/src/components/Meeting.css
@@ -11,6 +11,7 @@
 }
 
 .meeting-notes .minimize-notes {
+    cursor: pointer;
     position: absolute;
     font-size: 30px;
     top: calc(50% - 15px);
@@ -18,6 +19,7 @@
 }
 
 #main .expand-notes {
+    cursor: pointer;
     background-color: darkgrey;
     opacity: 0.7;
     position: absolute;
